added maven surefire plug-in