@@ -430,6 +430,31 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>
+                        -Xms128m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m
+                    </argLine>
+                    <excludes>
+                        <exclude>**/Abstract*Test.java</exclude>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*Example*.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>            
 
 			<!-- You'll probably want to remove this for your project. I'm just using 
 				it here so that dropwizard-example doesn't get deployed as a library. -->
